--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
-.canvas-background {
+.canvas {
     width: 600px;
     height: 500px;
     border: 1px solid black;
-    background: blue;
+    background-color: lightblue;
 }
 
 div#score-keeper {
@@ -14,4 +14,37 @@ div#score-keeper {
 
 .modal {
     position: fixed;
+    width: 300px;
+    height: 250px;
+    background-color: white;
+    margin: 12%;
+    padding: 20px;
+    box-sizing: 5px;
+    box-shadow: 5px 10px rgba(0,0,0,0.3);
+}
+
+.button {
+    border-radius: 20px;
+    width: 100%;
+    height: 40px;
+    background-color: peachpuff;
+}
+
+.restart-button {
+    border-radius: 20px;
+    width: 100%;
+    height: 40px;
+    background-color: peachpuff;
+}
+
+.restart-modal {
+    display: none;
+    position: fixed;
+    width: 300px;
+    height: 250px;
+    background-color: white;
+    margin: 12%;
+    padding: 20px;
+    box-sizing: 5px;
+    box-shadow: 5px 10px rgba(0,0,0,0.3);
 }
