--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,7 +6,7 @@
     width: 900px;
     height: 500px;
     border: 1px solid black;
-    background-image: url("/src/images/bg-img2.png");
+    background: url("../images/bg-img2.png");
     background-size: 800px;
     background-color: lightblue;
     position: relative;
